tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_20.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((((2 DIV y) DIV (1 - z)) DIV ((- z) MOD (y - 2))) - (((2 * 1) DIV (1 DIV 2)) DIV ((1223 MOD 1) * (1223 MOD z))));
               r := (((+ (0 + z)) - (+ (2 MOD 1223))) = (((- 0) DIV (1223 * 1)) + ((- 0) + (1223 - y))));
               z := (- (((0 MOD 0) - (x DIV 0)) MOD ((y * y) - (- 2))));
               r := ((- ((- 0) + (y * x))) = (((200 + 2) DIV (y MOD y)) + ((+ z) MOD (200 DIV 2))));
               z := ((((y + x) - (y MOD 1223)) MOD ((y * 2) + (+ 0))) + (- ((- 2) DIV (+ y))));
  (* error *)  p := (((- (r MOD 2)) < (- (x + x))) & ((+ (z MOD 2)) # ((z DIV z) - (z + x))));
               y := (+ ((- (2 * 0)) + ((+ y) MOD (1 - x))));
               p := (((- (x + x)) MOD ((- 200) + (- 0))) = (((2 * x) * (y * z)) DIV ((z * y) DIV (2 * 200))));
               p := (~ (((0 - 2) - (0 * y)) < (+ (z - 1223))));
               y := (((+ (1223 DIV x)) + ((1 + 1) * (1223 + z))) - ((- (- 0)) * ((0 DIV 0) * (- 1223))))
END Test16.